# timelog

./: Cargo.toml  README  TODO.md
crates/: README.md
crates/cli/: Cargo.toml
crates/cli-core/: Cargo.toml
crates/cli-core/src/: lib.rs  tests.rs
crates/cli-derive/: Cargo.toml
crates/cli-derive/src/: lib.rs
crates/cli/src/: lib.rs
crates/dbg/: Cargo.toml
crates/dbg/src/: main.rs
src/: cli.rs  commands.rs  main.rs  timelog.rs  timelogger.rs
