[package]
name = "timelog"
version = "0.1.0"
authors = ["Niklas Jonsson <niklasandersjonsson@gmail.com>"]
edition = "2021"

[workspace]
members = ["crates/cli", "crates/cli-core", "crates/cli-derive", "crates/dbg"]

[dependencies]
cli = { path = "crates/cli" }
dirs = "5.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
