[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
trybuild = "1.0"

[dependencies]
clap = { version = "4.4.0", features = ["string"] }
cli-derive = { path = "../cli-derive" }
log = "0.4"
